# CivitasLab

./: .gitignore  BOT8_2.0.0_HANDOFF.md  BOT8_dev28_IMPLEMENTATION_REPORT.md  BOT8_dev29_IMPLEMENTATION_REPORT.md  BOT8_dev30_IMPLEMENTATION_REPORT.md  BOT8_dev31_IMPLEMENTATION_REPORT.md  BOT8_dev32_IMPLEMENTATION_REPORT.md  BOT8_dev33_IMPLEMENTATION_REPORT.md  BOT8_dev34_IMPLEMENTATION_REPORT.md  BOT8_dev35_IMPLEMENTATION_REPORT.md  BOT8_dev36_IMPLEMENTATION_REPORT.md  BOT8_dev37_IMPLEMENTATION_REPORT.md  BOT8_dev38_IMPLEMENTATION_REPORT.md  BOT8_dev39_IMPLEMENTATION_REPORT.md  BOT8_dev40_IMPLEMENTATION_REPORT.md  BOT8_dev41_IMPLEMENTATION_REPORT.md  BOT8_dev42_IMPLEMENTATION_REPORT.md  BOT8_dev43_IMPLEMENTATION_REPORT.md  BOT8_dev44_IMPLEMENTATION_REPORT.md  CODEX_TASK_GUIDE.md  GITHUB_READY_PACKAGE_MANIFEST.md  MERGED_PACKAGE_1_DELTA_MANIFEST.md  MERGED_PACKAGE_2_1_DELTA_MANIFEST.md  MERGED_PACKAGE_2_DELTA_MANIFEST.md  MERGED_PACKAGE_3_DELTA_MANIFEST.md  MERGED_PACKAGE_4_DELTA_MANIFEST.md  MERGED_PACKAGE_5_DELTA_MANIFEST.md  MERGED_PACKAGE_6A_DELTA_MANIFEST.md  MERGED_PACKAGE_7_DELTA_MANIFEST.md  PACKAGE_7_1_FULL_MANIFEST.md  PACKAGE_7_2_UI_BLOCKER_FIX_MANIFEST.md  PACKAGE_7_3_GUI_WORKFLOW_FIX_MANIFEST.md  PACKAGE_E_DELTA_MANIFEST.md  README.md  VERSION  config.py  entity_state_snapshot.py  event_stream.py  experiment_db.py  font_setup.py  (+37 more)
